# automata

./: README.md  automata.opam  dune-project
examples/: dune  main.ml
lib/: combine.ml  combine.mli  dfa.ml  dfa.mli  dune  fsa.ml  fsa.mli  nfa.ml  nfa.mli  sig.mli
test/: dune
