(lang dune 3.10)

(name automata)

(generate_opam_files true)

(source
 (github prerak-123/automata))

(authors "Prerak")

(license LICENSE)

(package
 (name automata)
 (synopsis "A library to work with automatas written in OCaml")
 (depends ocaml dune)
 (tags
  ("automata")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
